[project]
name = "gyazo-pdf"
version = "0.1.1"
description = "A Python script to convert PDF pages to images and upload them to Gyazo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "Pillow",
    "PyMuPDF",
    "pyperclip",
    "python-dotenv",
    "python-gyazo",
    "PyYAML",
    "tqdm",
]

[project.scripts]
gp = "gyazo_pdf.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gyazo_pdf"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disable_error_code = ["import-untyped"]
